fix: 지도 칩 조회 API
- 이미지 삭제, PK 추가